--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   font-family: 'Orbitron', sans-serif;
-  background: #000 url('https://i.imgur.com/6KQsGNs.jpg') no-repeat center center fixed;
+  background: #000 url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?auto=format&fit=crop&w=800&q=80') no-repeat center center fixed;
   background-size: cover;
   color: #00ffff;
   min-height: 100vh;
