--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ button:hover {
 /* Galaxy section */
 .galaxy {
   min-height: 50vh;
-  background-image: url('https://cdn.pixabay.com/photo/2011/12/14/12/11/stars-11099_1280.jpg');
+  background-image: url('https://mmos.com/wp-content/uploads/2024/03/star-citizen-space-station.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
